meet api requirements
