# handlers/rate.go
@@ -14,7 +14,7 @@ import (
 // @Tags rate
 // @Produce json
 // @Success 200 {object} map[string]float64
-// @Failure 500 {object} map[string]string
+// @Failure 400 {object} map[string]string
 // @Router /api/rate [get]
 func GetRate(c *gin.Context) {
 	client := resty.New()
@@ -22,25 +22,25 @@ func GetRate(c *gin.Context) {
 		Get("https://api.exchangerate-api.com/v4/latest/USD")
 
 	if err != nil || resp.StatusCode() != http.StatusOK {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch exchange rate"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to fetch exchange rate"})
 		return
 	}
 
 	var result map[string]interface{}
 	if err := json.Unmarshal(resp.Body(), &result); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to parse exchange rate"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to parse exchange rate"})
 		return
 	}
 
 	rates, ok := result["rates"].(map[string]interface{})
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Rates not found in the response"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Rates not found in the response"})
 		return
 	}
 
 	rate, ok := rates["UAH"].(float64)
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Exchange rate for UAH not found"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Exchange rate for UAH not found"})
 		return
 	}
 
